[package]
name = "edil-quick-interface"
version = "0.1.0"
authors = ["Dmitry Nikolaev <dnikolaev@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
unicode-segmentation = "1.7.1"